--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/react-icons": "^3.0.0",
+    "@types/react-scroll": "^1.8.4",
     "@types/styled-components": "^5.1.25",
+    "framer-motion": "^6.5.1",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.7",
     "redux": "^4.2.0",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
